# cpp_chess

./: .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt  Makefile  TwoBishops.sln  TwoBishops.vcxproj  TwoBishops.vcxproj.filters  cmake_install.cmake  imgui.ini  main.cpp  run.sh
Chess/: Board.cpp  Board.h  CMakeLists.txt  Chess  Chess.cpp  Chess.h  Game.cpp  Game.h  Makefile  cmake_install.cmake
chess/header/: board.h  game.h  types.h
chess/source/: board.cpp  game.cpp
rendering/: textureloading.cpp  textureloading.h
